M       vbm_vol_genus0.mexmaci64
M       vbm_vol_genus0.mexw32
M       vbm_vol_genus0.mexw64
M       vbm_vol_gradient3.c
M       vbm_vol_gradient3.mexa64
M       vbm_vol_gradient3.mexmaci64
M       vbm_vol_gradient3.mexw32
M       vbm_vol_gradient3.mexw64
M       vbm_vol_interp3f.mexw32
M       vbm_vol_interp3f.mexw64
M       vbm_vol_laplace3.c
M       vbm_vol_laplace3.mexa64
M       vbm_vol_laplace3.mexmaci64
M       vbm_vol_laplace3.mexw32
M       vbm_vol_laplace3.mexw64
M       vbm_vol_laplace3R.c
M       vbm_vol_laplace3R.mexa64
M       vbm_vol_laplace3R.mexmaci64
M       vbm_vol_laplace3R.mexw32
M       vbm_vol_laplace3R.mexw64
M       vbm_vol_localstat.c
M       vbm_vol_localstat.mexa64
M       vbm_vol_localstat.mexmaci64
M       vbm_vol_localstat.mexw32
M       vbm_vol_localstat.mexw64
M       vbm_vol_median3.c
M       vbm_vol_median3.mexa64
M       vbm_vol_median3.mexmaci64
M       vbm_vol_median3.mexw32
M       vbm_vol_median3.mexw64
M       vbm_vol_median3c.mexw32
M       vbm_vol_median3c.mexw64
M       vbm_vol_pbtp.mexw32
M       vbm_vol_pbtp.mexw64
M       vbm_vol_simgrow.c
M       vbm_vol_simgrow.mexa64
M       vbm_vol_simgrow.mexw32
M       vbm_vol_simgrow.mexw64

(1) CAT is now using gifti formaz as default because fucking windows
    was not accepting freesurfer files.
(2) Updated surface filenames to gifti.
(3) Removed parameters bb and vox from GUI.
(4) No distiction at GUI level whether estimate or write segmentations.
(5) Handling of sanlm/ornlm flags was still not yet correct. 
(6) Added strict testing in compile script.
(7) Cleaned some code according to new warnings from #6.
(8) Recompiled all CAT- and mex-files.

------------------------------------------------------------------------
r603 | gaser | 2014-09-19 10:30:56

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man
M       vbm_surf_createCS.m

some small bugs removed...
------------------------------------------------------------------------
r604 | gaser | 2014-09-19 11:48:09